unpackaged/main/default/objects/OrderApi__Credit_Memo_Line__c/OrderApi__Credit_Memo_Line__c.object-meta.xml
<CustomObject>
    <description>Credit Memo Lines track revenue used from Credit Memos against invoices.</description>
    <label>Credit Memo Line</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Credit Memo Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memo Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>