unpackaged/main/default/objects/OrderApi__Credit_Memo_Line__c/fields/OrderApi__Amount__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Amount__c</fullName>
    <description>**System Calculated/Override** Total over payments received.</description>
    <inlineHelpText>**System Calculated/Override** Total over payments received.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>