unpackaged/main/default/objects/OrderApi__Credit_Memo_Line__c/fields/OrderApi__Credit_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Credit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** The account to use for crediting revenue applied against an Invoice. Default value is the linked Invoice&#39;s A/R account.</description>
    <inlineHelpText>**System Calculated/Override** The account to use for crediting revenue applied against an Invoice. Default value is the linked Invoice&#39;s A/R account.</inlineHelpText>
    <label>Liability Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Credit Memo Lines</relationshipLabel>
    <relationshipName>Credit_Memo_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>