unpackaged/main/default/objects/OrderApi__Credit_Memo_Line__c/fields/OrderApi__Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Credit_Memo__c</fullName>
    <description>**Required** Link to the Credit Memo being used by the invoice.</description>
    <inlineHelpText>**Required** Link to the Credit Memo being used by the invoice.</inlineHelpText>
    <label>Credit Memo</label>
    <referenceTo>OrderApi__Credit_Memo__c</referenceTo>
    <relationshipName>Credit_Memo_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>