unpackaged/main/default/objects/OrderApi__Credit_Memo_Line__c/fields/OrderApi__Invoice__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice where the OverPayment is made.</description>
    <inlineHelpText>Invoice where the OverPayment is made.</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>OrderApi__Invoice__c</referenceTo>
    <relationshipLabel>Credit Memo Lines</relationshipLabel>
    <relationshipName>Credit_Memo_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>