unpackaged/main/default/objects/OrderApi__Credit_Memo_Line__c/fields/OrderApi__Is_Posted__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the credit memo creates transactions.</description>
    <inlineHelpText>When checked, the credit memo creates transactions.</inlineHelpText>
    <label>Is Posted</label>
    <type>Checkbox</type>
</CustomField>