unpackaged/main/default/objects/OrderApi__Credit_Memo_Line__c/fields/OrderApi__Status__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Status__c</fullName>
    <description>**System Calculated/Override** Primary indicator of the credit memo&#39;s current status. Default value is &quot;Draft&quot;.</description>
    <inlineHelpText>**System Calculated/Override** Primary indicator of the credit memo&#39;s current status. Default value is &quot;Draft&quot;.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>