unpackaged/main/default/objects/OrderApi__Credit_Memo_Line__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Credit_Memo__c</columns>
    <columns>OrderApi__Invoice__c</columns>
    <columns>OrderApi__Amount__c</columns>
    <columns>OrderApi__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>